<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LyoActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/activity_lyo_tvTitle1"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:paddingStart="50dp"

        android:textSize="30sp"
        android:padding="10dp"
        />

    <ImageView
        android:id="@+id/activity_lyo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingLeft="20sp"
        app:layout_constraintBottom_toBottomOf="@id/activity_lyo_tvTitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_lyo_tvTitle1"
        app:srcCompat="@drawable/ic_baseline_west_24"
        app:tint="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_lyo_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="Title: "
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="@id/activity_lyo_tvTitle"
        app:layout_constraintTop_toTopOf="@id/activity_lyo_tvTitle"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/activity_lyo_tvTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/enter_recipe_title"
        app:layout_constraintLeft_toRightOf="@+id/activity_lyo_tv"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/activity_lyo_tvTitle1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_lyo_tvTitle"
        android:id="@+id/activity_lyo_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Step"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Temp."
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Time"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Keep Time"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pressure"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/activity_lyo_rcView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_lyo_layout"
        app:layout_constraintBottom_toTopOf="@+id/activity_lyo_bAdd"/>

    <Button
        android:id="@+id/activity_lyo_bAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/add_more"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_lyo_bSample"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_lyo_bClear" />

    <Button
        android:id="@+id/activity_lyo_bClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/clear_data"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_lyo_bSample"
        app:layout_constraintLeft_toRightOf="@+id/activity_lyo_bAdd"
        app:layout_constraintRight_toLeftOf="@+id/activity_lyo_bUpload" />

    <Button
        android:id="@+id/activity_lyo_bUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/upload_recipe"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_lyo_bSample"
        app:layout_constraintLeft_toRightOf="@+id/activity_lyo_bClear"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/activity_lyo_bSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/sample_chart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_lyo_bChart" />

    <Button
        android:id="@+id/activity_lyo_bChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/black"
        android:text="Show Chart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/activity_lyo_bSample"
        app:layout_constraintRight_toRightOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_lyo_chart"
        android:visibility="gone"
        >

    </com.github.mikephil.charting.charts.LineChart>



</androidx.constraintlayout.widget.ConstraintLayout>